fix spacing

--- a/willium.iatemplate/Contents/Resources/main.css
+++ b/willium.iatemplate/Contents/Resources/main.css
@@ -1111,7 +1111,7 @@ h2 {
 h3 {
     font-size: 1.25rem;
     font-weight: 300;
-    margin: 30px 0;
+    margin: 30px 0 30px;
     font-family: "charterbold", "Georgia", serif;
 }
 
@@ -1124,7 +1124,7 @@ h4 {
     font-family: "SF Mono", "meslo_lg_sregular", "Menlo", "Source Code Pro", monospace;
     color: #A9ACB5;
     font-size: 0.9rem;
-    margin: 10px 0;
+    margin: 30px 0 10px;
     overflow: visible;
 }
 
